2026-01-27 fixed bug in java eu/cqrxs/CryptConsole.java\n
TODO: usage is only valid for unix, make a usage in eu/cqrxs/console/CryptConsole.java that shows also \n

eu\cqrxs\console\CryptConsole.java